deploy: 40c4ee29c44d8fe207080e8689bb1613b01c4c98

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header>
   <div class="header wrapper">
   <figure class="logo wrapper">
-    <img src="../../assets/img/logo.png" alt="">
+    <img src="assets/img/logo.png" alt="">
   </figure>
         <nav class="navbar wrapper">
             <ul class="navbar--list">
@@ -65,7 +65,7 @@
 
 <section class="hero row">
     <div class="hero__decoration col-8">
-        <img class="hero__decoration__image" src="../assets/img/logo-large.png" />
+        <img class="hero__decoration__image" src="/assets/img/logo-large.png" />
     </div>
 
     
