--- a/features/Hikes/index.html
+++ b/features/Hikes/index.html
@@ -13,7 +13,7 @@
 <header>
   <div class="header wrapper">
   <figure class="logo wrapper">
-    <img src="../../assets/img/logo.png" alt="">
+    <img src="../assets/img/logo.png" alt="">
   </figure>
         <nav class="navbar wrapper">
             <ul class="navbar--list">
