deploy: 552673bb1f324fb9b569e4b3805e2863a00f5c0d

--- a/features/stats/index.html
+++ b/features/stats/index.html
@@ -54,7 +54,7 @@
         </nav>
     </div>
         <a class="hero-image--horizontal">
-            <img src="../../../assets/img/banner.jpg" alt="...">
+            <img src="../assets/img/banner.jpg" alt="...">
         </a>
 </header>
 
@@ -201,7 +201,7 @@
     <footer class="footer">
     <div class="footer--wrapper wrapper">
 <div>
-<img src="../../assets/img/logo.png">
+<img src="../assets/img/logo.png">
 <ul class="footer--links wrapper">
   <section>
     <h3>Our socials</h3>
