--- a/about-us/index.html
+++ b/about-us/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>about-us - My Walking App</title>
-    <link rel="stylesheet" href="assets/main.css" />
+    <link rel="stylesheet" href="../assets/main.css" />
 </head>
 <body>
     
@@ -13,7 +13,7 @@
 <header>
   <div class="header wrapper">
   <figure class="logo wrapper">
-    <img src="assets/img/logo.png" alt="">
+    <img src="../assets/img/logo.png" alt="">
   </figure>
         <nav class="navbar wrapper">
             <ul class="navbar--list">
@@ -56,7 +56,7 @@
         </nav>
     </div>
         <a class="hero-image--horizontal">
-            <img src="../../../assets/img/banner.jpg" alt="...">
+            <img src="../assets/img/banner.jpg" alt="...">
         </a>
 </header>
 
@@ -100,7 +100,7 @@
     <footer class="footer">
     <div class="footer--wrapper wrapper">
 <div>
-<img src="../../assets/img/logo.png">
+<img src="../assets/img/logo.png">
 <ul class="footer--links wrapper">
   <section>
     <h3>Our socials</h3>
