--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - My Walking App</title>
-    <link rel="stylesheet" href="assets/main.css" />
+    <link rel="stylesheet" href="./assets/main.css" />
 </head>
 <body>
     
@@ -13,7 +13,7 @@
 <header>
   <div class="header wrapper">
   <figure class="logo wrapper">
-    <img src="assets/img/logo.png" alt="">
+    <img src="./assets/img/logo.png" alt="">
   </figure>
         <nav class="navbar wrapper">
             <ul class="navbar--list">
@@ -56,7 +56,7 @@
         </nav>
     </div>
         <a class="hero-image--horizontal">
-            <img src="../../../assets/img/banner.jpg" alt="...">
+            <img src="./assets/img/banner.jpg" alt="...">
         </a>
 </header>
 
@@ -65,7 +65,7 @@
 
 <section class="hero row">
     <div class="hero__decoration col-8">
-        <img class="hero__decoration__image" src="/assets/img/logo-large.png" />
+        <img class="hero__decoration__image" src="./assets/img/logo-large.png" />
     </div>
 
     
@@ -185,7 +185,7 @@
             <div class="testi--article--content">
                 <em><span>"</span>Your company is truly upstanding and is behind its product 100%.</em>
                 <div class="testi--article--content--user">
-                    <img src="/assets/img/user-1.jpg" alt="">
+                    <img src=".//assets/img/user-1.jpg" alt="">
                     <span>Review by <strong> Lonnie Hoffman</strong></span>
                 </div>
             </div>
@@ -195,7 +195,7 @@
             <div class="testi--article--content">
                 <em><span>"</span>It&#39;s the perfect solution for our business. The best on the net! I just can&#39;t get enough of hike. I want to get a T-Shirt with hike on it so I can show it off to everyone. Hike impressed me on multiple levels.</em>
                 <div class="testi--article--content--user">
-                    <img src="/assets/img/user-2.jpg" alt="">
+                    <img src=".//assets/img/user-2.jpg" alt="">
                     <span>Review by <strong> Marion Warren</strong></span>
                 </div>
             </div>
@@ -205,7 +205,7 @@
             <div class="testi--article--content">
                 <em><span>"</span>I am so pleased with this product. Hike should be nominated for service of the year. This is simply unbelievable!</em>
                 <div class="testi--article--content--user">
-                    <img src="/assets/img/user-3.jpg" alt="">
+                    <img src=".//assets/img/user-3.jpg" alt="">
                     <span>Review by <strong> Gilbert Scott</strong></span>
                 </div>
             </div>
@@ -218,16 +218,16 @@
     <section>
         <article class="sponsor container wrapper">
             <ul class="sponsor--list">
-                <li><img src="/assets/img/Sponsor.jpg" alt=""></li>
-                <li><img src="/assets/img/Sponsor.jpg" alt=""></li>
-                <li><img src="/assets/img/Sponsor.jpg" alt=""></li>
-                <li><img src="/assets/img/Sponsor.jpg" alt=""></li>
-                <li><img src="/assets/img/Sponsor.jpg" alt=""></li>
-                <li><img src="/assets/img/Sponsor.jpg" alt=""></li>
-                <li><img src="/assets/img/Sponsor.jpg" alt=""></li>
-                <li><img src="/assets/img/Sponsor.jpg" alt=""></li>
-                <li><img src="/assets/img/Sponsor.jpg" alt=""></li>
-                <li><img src="/assets/img/Sponsor.jpg" alt=""></li>
+                <li><img src=".//assets/img/Sponsor.jpg" alt=""></li>
+                <li><img src=".//assets/img/Sponsor.jpg" alt=""></li>
+                <li><img src=".//assets/img/Sponsor.jpg" alt=""></li>
+                <li><img src=".//assets/img/Sponsor.jpg" alt=""></li>
+                <li><img src=".//assets/img/Sponsor.jpg" alt=""></li>
+                <li><img src=".//assets/img/Sponsor.jpg" alt=""></li>
+                <li><img src=".//assets/img/Sponsor.jpg" alt=""></li>
+                <li><img src=".//assets/img/Sponsor.jpg" alt=""></li>
+                <li><img src=".//assets/img/Sponsor.jpg" alt=""></li>
+                <li><img src=".//assets/img/Sponsor.jpg" alt=""></li>
             </ul>
         </article>
     </section>
@@ -327,7 +327,7 @@
     <footer class="footer">
     <div class="footer--wrapper wrapper">
 <div>
-<img src="../../assets/img/logo.png">
+<img src="./assets/img/logo.png">
 <ul class="footer--links wrapper">
   <section>
     <h3>Our socials</h3>
